# mouse-mover

./: .gitignore  LICENSE  README.md  pyproject.toml
mouse_mover/: __main__.py  record.py  settings.py  simulate.py  train.py
